@@ -2,6 +2,9 @@ ABMI PACKAGE VERSIONS
 
 Version 0.0-2, November 12, 2008 (opened November 21, 2008)
 
+    * separateint: removes, because I found the base
+    function strsplit().
+
     * is.na related functions: improvements and fixes.
 
     * help files: written.
